# bachelor-ElectionGuard-in-hacspec

./: .gitignore
rustdoc/: Specification proof-of-concept.lnk  readme.md
rustdoc/Files/: crates.js  help.html  search-index.js  settings.html  source-files.js
rustdoc/Files/abstract_integers/: all.html  enum.Bound.html  enum.ControlFlow.html  enum.GeneratorState.html  enum.Ordering.html  enum.Sign.html  fn.one.html  fn.zero.html  index.html  macro.abstract_int.html  macro.abstract_nat_mod.html  macro.abstract_public.html  macro.abstract_public_modular_integer.html  macro.abstract_public_nat_mod.html  macro.abstract_secret.html  macro.abstract_secret_modular_integer.html  macro.abstract_signed.html  macro.abstract_signed_public_integer.html  macro.abstract_signed_secret_integer.html  macro.abstract_unsigned.html  macro.abstract_unsigned_public_integer.html  macro.abstract_unsigned_secret_integer.html  macro.define_abstract_integer_checked.html  macro.define_refined_modular_integer.html  macro.modular_integer.html  struct.BigInt.html  struct.BigUint.html  struct.ParseIntError.html  struct.Range.html  struct.RangeFrom.html  struct.RangeFull.html  struct.RangeInclusive.html  struct.RangeTo.html  struct.RangeToInclusive.html  struct.Yeet.html  trait.Add.html  trait.AddAssign.html  trait.BitAnd.html  trait.BitAndAssign.html  trait.BitOr.html  (+36 more)
rustdoc/Files/aead/: all.html  index.html  struct.Error.html  struct.Payload.html  trait.Aead.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.AeadMut.html  trait.AeadMutInPlace.html  trait.Buffer.html  trait.NewAead.html  type.Key.html  type.Nonce.html  type.Result.html  type.Tag.html
rustdoc/Files/doc/: all.html  index.html
rustdoc/Files/generic_array/: all.html  index.html  macro.arr.html  struct.GenericArray.html  trait.ArrayLength.html
rustdoc/Files/hacspec_chacha20/: all.html  fn.chacha20.html  fn.chacha20_constants_init.html  fn.chacha20_core.html  fn.chacha20_encrypt_block.html  fn.chacha20_encrypt_last.html  index.html  (+13 more)
src/rustdoc/: Cargo.toml  intro.md
src/rustdoc/src/: doc.rs
src/schema/: Cargo.toml
src/seq_arithmetic/: Cargo.toml
src/string/: Cargo.toml
src/string/src/: string.rs
src/string/tests/: string.rs
src/vEight/: Cargo.toml
src/vEighteen/: Cargo.toml
src/vEleven/: Cargo.toml
src/vFifteen/: Cargo.toml
src/vFifteen/src/: vFifteen.rs
src/vFive/: Cargo.toml
src/vFour/: Cargo.toml
src/vFour/src/: vFour.rs
src/vFourteen/: Cargo.toml
src/vNine/: Cargo.toml
src/vNineteen/: Cargo.toml
src/vOne/: Cargo.toml
src/vOne/src/: vOne.rs
src/vSeven/: Cargo.toml
src/vSeventeen/: Cargo.toml
src/vSix/: Cargo.toml
src/vSixteen/: Cargo.toml
src/vTen/: Cargo.toml
src/vThirteen/: Cargo.toml
src/vThree/: Cargo.toml
src/vTwelve/: Cargo.toml
src/vTwo/: Cargo.toml
src/vTwo/src/: vTwo.rs
(+8550 files in other folders)
