[package]
name = "string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/string.rs"

[dependencies]
hacspec-lib = { path = "../../hacspec/lib" }
hacspec-provider = { path = "../../hacspec/provider" }
schema = { path = "../schema" }
